--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 /pyplm.egg-info
+/pseudolm.egg-info
 # pyplm.egg-info/*
 /*/__pycache__
 /*/*/__pycache__
@@ -10,7 +11,6 @@
 /*.hdf5
 /.ipynb_checkpoints
 /.ipynb_checkpoints/*
-# /outputs
-/outputs/*
+/outputs/
 /inference/__pycache__
 /inference/__pycache__/*
